# xpander

./: .gitignore  LICENCE  MANIFEST.in  README.md  TODO.md  bugs  cloc.md  package.json  pyproject.toml  requirements.txt  setup.py  tsconfig.json  xpander-cli  xpander-gui  xpander-indicator  xpanderd
data/: settings.ini  xpander-gui.desktop  xpander-indicator.desktop
data/phrases/Examples/: Fill form.json  Hyperlink from Clipboard.json  Thanks for order.json
lib/: CONSTANTS.py  KEYSYMDEF.py  gtkui.py  manager.py  service.py  shared.py  xinterface.py
lib/Examples/: fill form.json  link from clipboard.json  smile.json  timestamp.json
src/: xpander.py  xpander.ts
src/static/: about.html  fillin.html  manager.html
src/static/styles/: about.sass  fillin.sass  fonts  manager.sass
src/xpander_data/: settings.ini
src/xpander_data/examples/: Emoji.json  Fill form.json  Hyperlink from Clipboard.json  Thanks for order.json
src/xpander_py/: context.py  fs.py  output.py  phrase.py  server.py  service.py  util.py
src/xpander_ts/: about.ts  fillin.ts  interface.ts  keymap.json  manager.ts
xpander/: control.py  fs.py  gtk_dialogs.py  gtk_gui.py  html.py  phrase.py  service.py  version.py
xpander/data/: settings.ini
xpander/data/Examples/: Emoji.json  Fill form.json  Hyperlink from Clipboard.json  Thanks for order.json
