[tool.poetry]
name = "xpander"
version = "3.0.0rc0"
description = "Text expander for Windows and Linux."
authors = ["Ozymandias <tomas.rav@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
appdirs = "^1.4"
macpy = "^0.1.2"
klembord = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
